@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.227 2009/03/26 00:49:17 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.227.2.1 2009/10/08 16:28:38 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -1020,15 +1020,12 @@ show_version(FILE *fp)
 %s\tSystem: %s %s\n\
 %s\n\
 %s\t%s\n\
-%s\tThomas Williams, Colin Kelley and many others\n\
+%s\tThomas Williams, Colin Kelley, and many others\n\
 %s\n\
-%s\tType `help` to access the on-line reference manual.\n\
-%s\tThe gnuplot FAQ is available from\n\
-%s\t\t%s\n\
-%s\n\
-%s\tSend comments and help requests to  <%s>\n\
-%s\tSend bug reports and suggestions to <%s>\n\
-%s\n",
+%s\timmediate help:  type \"help\"\n\
+%s\tgnuplot FAQ:     %s\n\
+%s\treport bugs:     %s\n\
+",
 	    p,			/* empty line */
 	    p, PROGRAM,
 	    p, gnuplot_version, gnuplot_patchlevel,
@@ -1039,12 +1036,9 @@ show_version(FILE *fp)
 	    p,			/* authors */
 	    p,			/* empty line */
 	    p,			/* Type `help` */
-	    p,			/* FAQ is at */
 	    p, faq_location,
-	    p,			/* empty line */
-	    p, help_email,
-	    p, bug_email,
-	    p);			/* empty line */
+	    p, bug_report
+	    );
 
 
     /* show version long */
